plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation 'com.google.guava:guava:23.0'
    implementation 'org.json:json:20201115'
    testImplementation 'junit:junit:4.12'
}

group = 'com.adventofcode'
version = '1.0-SNAPSHOT'
sourceCompatibility = '15'

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
    systemProperty "print", System.getProperty("print")

    testLogging {
        outputs.upToDateWhen {false}
        showStandardStreams = true
    }
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
